# LogicProver

./: LICENSE  LogicProver.cabal  Main.hs  README.md
LogicProver/: Lang.hs  Logic.hs  Parse.hs  Prover.hs
