name:                LogicProver
version:             0.1.0.0
synopsis:            Proposition prover for classical propositional logic
license:             MIT
license-file:        LICENSE
author:              Tim Thornton
maintainer:          t.thornton6@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable LogicProver
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
